--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
-    color: var(--white-text-color);
+    color: var(--text-color);
     background-color: var(--white-bg-color);
 }
 .container {
@@ -88,6 +88,16 @@ body {
 .primary-btn:active {
     opacity: 0.6;
 }
+/* SECTION TITLE */
+.section-title {
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 59px;
+    color: var(--black-color);
+    text-align: center;
+    text-transform: uppercase;
+}
+/* SECTION TITLE END */
 /* GLOBAL STYLES END */
 
 /* HEADER STYLES */
@@ -189,6 +199,96 @@ body {
 }
 /* HEADER BOTTOM STYLES END */
 /* HEADER STYLES END */
+/* MAIN STYLES */
+.main {
+    flex-grow: 1;
+}
+.collection {
+    padding: 20px;
+    background-color: var(--white-bg-color);
+    overflow: hidden;
+}
+.collection__inner {
+    background-image: url("../images/jpg/collection-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 50px 0;
+    position: relative;
+}
+.collection__title {
+    margin-bottom: 80px;
+}
+.collection__list {
+    width: 100%;
+    max-width: 1114px;
+    list-style: none;
+    margin: 0 auto;
+}
+.collection__item {
+    display: flex;
+    align-items: center;
+}
+.collection__item:nth-child(even) {
+    flex-direction: row-reverse;
+}
+.collection__item:first-child div {
+    margin-right: 94px;
+    margin-left: 117px;
+}
+.collection__item:nth-child(2) div {
+    margin-right: 117px;
+    margin-left: 157px;
+}
+.collection__item:nth-child(3) div {
+    margin-left: 117px;
+    margin-right: 157px;
+}
+.collection__item:last-child div {
+    margin-right: 97px;
+    margin-left: 157px;
+}
+.collection__item-img {
+    width: 450px;
+    height: 375px;
+    object-fit: contain;
+    object-position: center;
+}
+.collection__item-title {
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 56px;
+    color: var(--text-color);
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+.collection__item-text {
+    font-size: 22px;
+    line-height: 34px;
+}
+.collection__left-leaf {
+    position: absolute;
+    top: 50px;
+    left: -168px;
+}
+.collection__left-lite-leaf {
+    position: absolute;
+    bottom: 170px;
+    left: -206px;
+}
+.collection__right-leaf {
+    position: absolute;
+    bottom: 462px;
+    right: -230px;
+    z-index: 1;
+}
+.collection__right-lite-leaf {
+    position: absolute;
+    bottom: 575px;
+    right: -170px;
+    z-index: 0;
+}
+/* MAIN STYLES END */
 
 
 
@@ -208,5 +308,8 @@ only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) { 
     .header {
         background-image: url("../images/jpg/header-bg-img@2x.jpg");
+    }
+    .header-bottom__img-wrapper {
+        background-image: url("../images/jpg/home-header-img.jpg");
     }
 }
