--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
     --white-bg-color: #fff;
     --white-text-color: #fff;
     --secondary-color: #c99b67;
+    --card-bg-color: #f8f8f2;
 }
 
 
@@ -76,11 +77,30 @@ body {
     border-radius: 100px;
     display: inline-block;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 15px;
     line-height: 18.75px;
-    color: var(--white-text-color);
+    background-color: var(--primary-color);
     text-decoration: none;
     text-transform: uppercase;
+}
+.secondary-btn {
+    color: var(--white-bg-color);
+    padding: 16px 24px;
+    border-radius: 100px;
+    display: inline-block;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18.75px;
+    letter-spacing: 1px;
+    background-color: var(--secondary-color);
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.secondary-btn:hover {
+    opacity: 0.8;
+}
+.secondary-btn:active {
+    opacity: 0.6;
 }
 .primary-btn:hover {
     opacity: 0.8;
@@ -361,6 +381,93 @@ body {
     top: -50px;
     left: -50px;
 }
+/* FEATURES STYLES */
+.features {
+    margin-bottom: 50px;
+}
+.features__inner {
+    background-image: url("../images/jpg/features-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 50px 30px;
+    text-align: center;
+    position: relative;
+}
+.features__title {
+    margin-bottom: 80px;
+    color: var(--white-text-color);
+}
+.features__list {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
+    text-align: left;
+    position: relative;
+}
+.features__hr {
+    width: 100%;
+    max-width: 900px;
+    position: absolute;
+    border: 3px dashed var(--secondary-color);
+    border-bottom: none;
+    top: 28px;
+    left: 35px;
+    z-index: 0;
+}
+.features__item {
+    width: 100%;
+    max-width: 433px;
+}
+.features__item-box {
+    width: 60px;
+    height: 60px;
+    background-color: var(--card-bg-color);
+    border: solid 4px var(--secondary-color);
+    margin-bottom: 20px;
+    display: inline-block;
+    position: relative;
+    z-index: 2;
+}
+.features__item-content {
+    background-color: var(--card-bg-color);
+    padding: 20px 20px 40px;
+}
+.features__item-number {
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 75px;
+    color: var(--text-color);
+    margin-bottom: 45px;
+    margin-bottom: 45px;
+    margin-left: auto;
+    text-align: right;
+}
+.features__item-title {
+    width: 100%;
+    max-width: 245px;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+.features__item-text {
+    width: 100%;
+    max-width: 385px;
+}
+.features__icon {
+    width: 327px;
+    height: 192px;
+    object-fit: contain;
+    object-position: center;
+    display: block;
+    position: absolute;
+    top: 41px;
+    right: 68px;
+}
+/* FEATURES STYLES END */
 /* CHOOSE STYLES END */
 /* MAIN STYLES END */
 
@@ -388,5 +495,8 @@ only screen and (                min-resolution: 2dppx) {
     }
     .choose__inner {
         background-image: url("../images/jpg/choose-bg@2x.jpg");
+    }
+    .features__inner {
+        background-image: url("../images/jpg/features-bg.jpg");
     }
 }
