--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* CUSTOM PROPERTY */
 :root {
     --primary-color: #0a775f;
@@ -42,7 +49,8 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -56,8 +64,13 @@ html {
 }
 body {
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     font-family: var(--roboto-font);
     font-weight: 400;
     font-size: 18px;
@@ -130,12 +143,20 @@ body {
     padding: 40px 0;
 }
 .header-top__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding: 0 50px;
 }
 .site-logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .site-logo:hover {
@@ -147,13 +168,19 @@ body {
 .site-logo__img {
     width: 235px;
     height: 24px;
-    object-fit: contain;
-    object-position: center;
+    -o-object-fit: contain;
+        object-fit: contain;
+    -o-object-position: center;
+        object-position: center;
 }
 .sitenav__list {
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .sitenav__item:not(:last-child) {
     margin-right: 40px;
@@ -176,8 +203,12 @@ body {
 
 /* HEADER BOTTOM STYLES */
 .header-bottom__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding: 0;
 }
 .header-bottom__home-text-wrapper {
@@ -211,8 +242,10 @@ body {
 .header-bottom__roung-img {
     width: 213px;
     height: 214px;
-    object-fit: contain;
-    object-position: center;
+    -o-object-fit: contain;
+        object-fit: contain;
+    -o-object-position: center;
+        object-position: center;
     position: absolute;
     top: -81.62px;
     left: -92px;
@@ -221,7 +254,9 @@ body {
 /* HEADER STYLES END */
 /* MAIN STYLES */
 .main {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
 }
 .collection {
     padding: 20px;
@@ -246,11 +281,18 @@ body {
     margin: 0 auto;
 }
 .collection__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .collection__item:nth-child(even) {
-    flex-direction: row-reverse;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
 }
 .collection__item:first-child div {
     margin-right: 94px;
@@ -271,8 +313,10 @@ body {
 .collection__item-img {
     width: 450px;
     height: 375px;
-    object-fit: contain;
-    object-position: center;
+    -o-object-fit: contain;
+        object-fit: contain;
+    -o-object-position: center;
+        object-position: center;
 }
 .collection__item-title {
     font-weight: 500;
@@ -332,8 +376,12 @@ body {
     margin-bottom: 80px;
 }
 .choose__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     list-style: none;
     position: relative;
 }
@@ -348,13 +396,21 @@ body {
 .choose__item-img {
     width: 433px;
     height: 500px;
-    object-fit: cover;
-    object-position: center;
+    -o-object-fit: cover;
+        object-fit: cover;
+    -o-object-position: center;
+        object-position: center;
     display: block;
+    -webkit-transition: -webkit-transform 0.4s ease;
+    transition: -webkit-transform 0.4s ease;
+    -o-transition: transform 0.4s ease;
     transition: transform 0.4s ease;
+    transition: transform 0.4s ease, -webkit-transform 0.4s ease;
 }
 .choose__item:hover .choose__item-img {
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
 }
 .choose__item-title {
     font-size: 30px;
@@ -374,8 +430,10 @@ body {
 .choose__icon {
     width: 140px;
     height: 144px;
-    object-fit: contain;
-    object-position: center;
+    -o-object-fit: contain;
+        object-fit: contain;
+    -o-object-position: center;
+        object-position: center;
     display: block;
     position: absolute;
     top: -50px;
@@ -400,8 +458,12 @@ body {
 }
 .features__list {
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 60px;
     text-align: left;
     position: relative;
@@ -460,8 +522,10 @@ body {
 .features__icon {
     width: 327px;
     height: 192px;
-    object-fit: contain;
-    object-position: center;
+    -o-object-fit: contain;
+        object-fit: contain;
+    -o-object-position: center;
+        object-position: center;
     display: block;
     position: absolute;
     top: 41px;
@@ -477,18 +541,28 @@ body {
     padding: 68px 0;
 }
 .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .footer-logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .footer__logo-img {
     width: 235px;
     height: 24px;
-    object-fit: contain;
-    object-position: center;
+    -o-object-fit: contain;
+        object-fit: contain;
+    -o-object-position: center;
+        object-position: center;
 }
 .footer .sitenav__link {
     font-weight: 700;
@@ -496,6 +570,8 @@ body {
     line-height: 18.75px;
 }
 .footer__social-media {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
 }
@@ -503,12 +579,18 @@ body {
     margin-right: 30px;
 }
 .footer__social-media-link {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
 }
 .footer__social-media-link:hover {
     opacity: 0.8;
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
 }
 .footer__social-media-link:active {
     opacity: 0.6;
@@ -516,8 +598,10 @@ body {
 .footer__social-media-img {
     width: 30px;
     height: 30px;
-    object-fit: contain;
-    object-position: center;
+    -o-object-fit: contain;
+        object-fit: contain;
+    -o-object-position: center;
+        object-position: center;
 }
 /* FOOTER STYLES END */
 
@@ -532,9 +616,10 @@ body {
 
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
 only screen and (     -o-min-device-pixel-ratio: 2/1),
 only screen and (        min-device-pixel-ratio: 2),
+only screen and (                -webkit-min-device-pixel-ratio: 2),
+only screen and (                -o-min-device-pixel-ratio: 2/1),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) { 
     .header {
